fixed links for github pages

--- a/portfolioWF.html
+++ b/portfolioWF.html
@@ -11,33 +11,13 @@
 </head>
 
 <header class="navHeader"> 
-    <a href="portfolioLink">Portfolio</a>
-    <img src="logo.jpg" alt="Sunny's Logo" class="navImage">
-    <a href="aboutMeLink">About Me</a>
+    <a href="portfolioWF.html">Portfolio</a>
+    <a href="index.html"><img src="logo.jpg" alt="Sunny's Logo" class="navImage"></a>
+    <a href="aboutWF.html">About Me</a>
 </header>
 <body>
     <main>
-        <section class="start hide">
-            <h1>Welcome!</h1>
-            <p class="intro tab">
-                Hi and welcome to Sunny Lee’s Web Development Portfolio!  She is aspiring to be an expert full stack developer and loves to create apps and programs for people to use.
-            </p>
-            <section class="buttons">
-                <button class="startButton" onclick="">Portfolio</button>
-                <button class="startButton">About Me</button>
-            </section>
-        </section>
-
-
-
-
-
-
-
-
-
         <section class="portfolio">
-            
             <section class="portfolioSS">
                 <section class="techList">
                     <p>HTML CSS JavaScript JQuery</p>
@@ -56,31 +36,6 @@
                 <button class="nButton">Previous</button>
                 <p class="pageNo">1 <span class="pNumber"></span> of <span class="total"> 2</span></p>
                 <button class="nButton">Next</button>
-            </section>
-        </section>
-
-
-
-
-
-
-
-
-
-
-        <section class="aboutMe hide">
-            <section class="bio">
-                <h1>About Sunny</h1>
-                <p class="bio tab"> 
-                    Being an avid puzzle lover since she was a toddler, Sunny has always loved solving problems, paying attention to detail, and creating things with her hands.  She has a Masters in Software Engineering and is currently in the Bloc/Thinkful Web Development Program.  Coding has always been a hobby and she is excited to turn it into a profession.  Her other hobbies include reading, racquet sports (ping pong and tennis), hiking, tech, and of course puzzles.  She also fancies anything Disney, spending time with her kids, husband, and teaching the pet cat to do tricks.  Thanks for stopping by and feel free to explore and checkout her projects!
-                </p>
-            </section>
-            <section class="contact">
-                <h1>Contact</h1>
-                <p>Email:  <span class="email">LeeSunny@gmail.com</span></p>
-                <section class="socialMediaLinks">
-                    GitHub   LinkedIn   Email
-                </section>
             </section>
         </section>
     </main>
