--- a/aboutWF.html
+++ b/aboutWF.html
@@ -11,54 +11,12 @@
 </head>
 
 <header class="navHeader"> 
-    <a href="portfolioLink">Portfolio</a>
-    <img src="logo.jpg" alt="Sunny's Logo" class="navImage">
-    <a href="aboutMeLink">About Me</a>
+    <a href="portfolioWF.html">Portfolio</a>
+    <a href="index.html"><img src="logo.jpg" alt="Sunny's Logo" class="navImage"></a>
+    <a href="aboutWF.html">About Me</a>
 </header>
 <body>
     <main>
-        <section class="start hide">
-            <h1>Welcome!</h1>
-            <p class="intro tab">
-                Hi and welcome to Sunny Lee’s Web Development Portfolio!  She is aspiring to be an expert full stack developer and loves to create apps and programs for people to use.
-            </p>
-            <section class="buttons">
-                <button class="startButton" onclick="">Portfolio</button>
-                <button class="startButton">About Me</button>
-            </section>
-        </section>
-
-        <section class="portfolio hide">
-            <section class="techList">
-                <p>HTML CSS JavaScript JQuery</p>
-            </section>
-            <section class="portfolioSS">
-                <h1>Project Title</h1>
-                <img src="screenshot.jpg" alt="Portfolio 1 Screenshot">
-                <p class="portfolioDescription">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </section>
-            <section class="linksButtons">
-                <a href="code">Code</a><span> | </span>
-                <a href="live">Live Page</a>
-                <section class="navigateButtons">
-                    <button class="previous">Previous</button>
-                    <p class="pageNo"><span class="pNumber"></span>out of <span class="total"></span></p>
-                    <button class="next">Next</button>
-                </section>
-            </section>
-        </section>
-
-
-
-
-
-
-
-
-
-        
         <section class="aboutMe">
             <section class="bio">
                 <h1>About Sunny</h1>
