--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
     <a href="aboutMeLink">About Me</a>
 </header>
 <body>
-    
-
     <main>
         <section class="start">
             <h1>Welcome!</h1>
@@ -24,55 +22,8 @@
                 Hi and welcome to Sunny Lee’s Web Development Portfolio!  She is aspiring to be an expert full stack developer and loves to create apps and programs for people to use.
             </p>
             <section class="buttons">
-                <button class="startButton" onclick="">Portfolio</button>
-                <button class="startButton">About Me</button>
-            </section>
-        </section>
-
-
-
-
-
-
-
-
-
-        
-        <section class="portfolio hide">
-            <section class="techList">
-                <p>HTML CSS JavaScript JQuery</p>
-            </section>
-            <section class="portfolioSS">
-                <h1>Project Title</h1>
-                <img src="screenshot.jpg" alt="Portfolio 1 Screenshot">
-                <p class="portfolioDescription">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </section>
-            <section class="linksButtons">
-                <a href="code">Code</a><span> | </span>
-                <a href="live">Live Page</a>
-                <section class="navigateButtons">
-                    <button class="previous">Previous</button>
-                    <p class="pageNo"><span class="pNumber"></span>out of <span class="total"></span></p>
-                    <button class="next">Next</button>
-                </section>
-            </section>
-        </section>
-
-        <section class="aboutMe hide">
-            <section class="bio">
-                <h1>About Sunny</h1>
-                <p class="bio"> 
-                    Being an avid puzzle lover since she was a toddler, Sunny has always loved solving problems, paying attention to detail, and creating things with her hands.  She has a Masters in Software Engineering and is currently in the Bloc/Thinkful Web Development Program.  Coding has always been a hobby and she is excited to turn it into a profession.  Her other hobbies include reading, racquet sports (ping pong and tennis), hiking, tech, and of course puzzles.  She also fancies anything Disney, spending time with her kids, husband, and teaching the pet cat to do tricks.  Thanks for stopping by and feel free to explore and checkout her projects!
-                </p>
-            </section>
-            <section class="contact">
-                <h1>Contact</h1>
-                <p>Email:  LeeSunny@gmail.com</p>
-                <section class="socialMediaLinks">
-                    GitHub   LinkedIn   Email
-                </section>
+                <button class="startButton" onclick="window.location.href='portfolioWF.html'">Portfolio</button>
+                <button class="startButton" onclick="window.location.href='aboutWF.html'">About Me</button>
             </section>
         </section>
     </main>  
