fixed links for email

--- a/aboutWF.html
+++ b/aboutWF.html
@@ -26,7 +26,7 @@
             </section>
             <section class="contact">
                 <h1>Contact</h1>
-                <p>Email:  <span class="email">LeeSunny@gmail.com</span></p>
+                <p>Email:  <a href="mailto:leesunny507@gmail.com?subject=Portfolio%20Inquiry" target='_blank'>LeeSunny@gmail.com</a></p>
                 <section class="socialMediaLinks">
                     GitHub   LinkedIn   Email
                 </section>
