updated wireframes to match napkin designs

--- a/aboutWF.html
+++ b/aboutWF.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Sunny Lee's Web Development Portfolio 2020">
 </head>
 
-<header class="navHeader"> 
+<header> 
     <a href="portfolioWF.html">Portfolio</a>
     <a href="index.html"><img src="logo.jpg" alt="Sunny's Logo" class="navImage"></a>
     <a href="aboutWF.html">About Me</a>
@@ -19,13 +19,13 @@
     <main>
         <section class="aboutMe">
             <section class="bio">
-                <h1>About Sunny</h1>
+                <h1 class="heading">About Sunny</h1>
                 <p class="bio tab"> 
-                    Being an avid puzzle lover since she was a toddler, Sunny has always loved solving problems, paying attention to detail, and creating things with her hands.  She has a Masters in Software Engineering and is currently in the Bloc/Thinkful Web Development Program.  Coding has always been a hobby and she is excited to turn it into a profession.  Her other hobbies include reading, racquet sports (ping pong and tennis), hiking, tech, and of course puzzles.  She also fancies anything Disney, spending time with her kids, husband, and teaching the pet cat to do tricks.  Thanks for stopping by and feel free to explore and checkout her projects!
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </section>
             <section class="contact">
-                <h1>Contact</h1>
+                <h1 class="heading">Contact</h1>
                 <p>Email:  <a href="mailto:leesunny507@gmail.com?subject=Portfolio%20Inquiry" target='_blank'>LeeSunny@gmail.com</a></p>
                 <section class="socialMediaLinks">
                     GitHub   LinkedIn   Email
