--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Sunny's Portfolio</title>
     <meta name="description" content="Sunny Lee's Web Development Portfolio 2020">
 </head>
-<header class="startHeader">
+<header class="hide">
     <a href="portfolioLink">Portfolio</a>
-    <img src="logo.jpg" alt="Sunny's Logo" class="startImage">
+    <a href="index.html"><img src="images/tinySLlogo.png" alt="Sunny's Logo" class="navImage"></a>
     <a href="aboutMeLink">About Me</a>
 </header>
 <body>
@@ -21,6 +21,7 @@
             <p class="intro tab">
                 Hi and welcome to Sunny Lee’s Web Development Portfolio!  She is aspiring to be an expert full stack developer and loves to create apps and programs for people to use.
             </p>
+            <img src="images/tinySLlogo.png" alt="Sunny's logo" class="startImage">
             <section class="buttons">
                 <button class="startButton" onclick="window.location.href='portfolioWF.html'">Portfolio</button>
                 <button class="startButton" onclick="window.location.href='aboutWF.html'">About Me</button>
