--- a/portfolioWF.html
+++ b/portfolioWF.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Sunny Lee's Web Development Portfolio 2020">
 </head>
 
-<header class="navHeader"> 
+<header> 
     <a href="portfolioWF.html">Portfolio</a>
     <a href="index.html"><img src="logo.jpg" alt="Sunny's Logo" class="navImage"></a>
     <a href="aboutWF.html">About Me</a>
