updated wireframes to match

--- a/portfolioWF.html
+++ b/portfolioWF.html
@@ -22,10 +22,10 @@
                 <section class="techList">
                     <p>HTML CSS JavaScript JQuery</p>
                 </section>
-                <h1>Project Title</h1>
+                <h1 class ="heading">Project Title</h1>
                 <img src="screenshot.jpg" alt="Portfolio 1 Screenshot" class="pImage">
                 <p class="portfolioDescription tab">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                 </p>
                 <section class="linksButtons">
                     <a href="code">Code</a><span> | </span>
@@ -34,12 +34,53 @@
             </section>
             <section class="navigateButtons">
                 <button class="nButton">Previous</button>
-                <p class="pageNo">1 <span class="pNumber"></span> of <span class="total"> 2</span></p>
+                <p class="pageNo">1 <span class="pNumber"></span> of <span class="total"> 3</span></p>
+                <button class="nButton">Next</button>
+            </section>
+        </section>
+        <section class="portfolio2 hide">
+            <section class="portfolioSSE">
+                <section class="techList">
+                    <p>HTML CSS JavaScript JQuery</p>
+                </section>
+                <h1 class ="heading">Project Title 2</h1>
+                <img src="screenshot.jpg" alt="Portfolio 2 Screenshot" class="pImage">
+                <p class="portfolioDescription tab">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                </p>
+                <section class="linksButtons">
+                    <a href="code">Code</a><span> | </span>
+                    <a href="live">Live Page</a>
+                </section>
+            </section>
+            <section class="navigateButtons">
+                <button class="nButton">Previous</button>
+                <p class="pageNo">2 <span class="pNumber"></span> of <span class="total"> 3</span></p>
+                <button class="nButton">Next</button>
+            </section>
+        </section>
+        <section class="portfolio2 hide">
+            <section class="portfolioSSE">
+                <section class="techList">
+                    <p>HTML CSS JavaScript JQuery</p>
+                </section>
+                <h1 class ="heading">Project Title 3</h1>
+                <img src="screenshot.jpg" alt="Portfolio 3 Screenshot" class="pImage">
+                <p class="portfolioDescription tab">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                </p>
+                <section class="linksButtons">
+                    <a href="code">Code</a><span> | </span>
+                    <a href="live">Live Page</a>
+                </section>
+            </section>
+            <section class="navigateButtons">
+                <button class="nButton">Previous</button>
+                <p class="pageNo">3 <span class="pNumber"></span> of <span class="total"> 3</span></p>
                 <button class="nButton">Next</button>
             </section>
         </section>
     </main>
 </body>
-<footer>&copy <a href="mailto:leesunny507@gmail.com?subject=Portfolio%20Inquiry" target='_blank'>Sunny Lee</a> 2020</footer>
-
+<footer>&copy <a href="mailto:leesunny507@gmail.com?subject=Portfolio%20Inquiry" target='_blank' class="footerlink">Sunny Lee</a> 2020</footer>
 </html>
