finished html greybox

--- a/portfolioWF.html
+++ b/portfolioWF.html
@@ -38,7 +38,7 @@
                 <button class="nButton">Next</button>
             </section>
         </section>
-        <section class="portfolio2 hide">
+        <section class="portfolio2" id="p2">
             <section class="portfolioSSE">
                 <section class="techList">
                     <p>HTML CSS JavaScript JQuery</p>
@@ -59,7 +59,7 @@
                 <button class="nButton">Next</button>
             </section>
         </section>
-        <section class="portfolio2 hide">
+        <section class="portfolio3">
             <section class="portfolioSSE">
                 <section class="techList">
                     <p>HTML CSS JavaScript JQuery</p>
